[package]
name = "reproto-wasm"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-wasm"
description = """
Rethinking Protocol Generators

WebAssembly Component
"""

[dependencies]

[lib]
crate-type = ["cdylib"]

name = "reproto_wasm"
path = "reproto_wasm.rs"
