[package]
name = "reproto-backend-doc"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-doc"
description = """
Rethinking Protocol Generators
"""
build = "build.rs"

[dependencies]

[build-dependencies]
toml = "0.5.9"
handlebars = "4.3.1"
serde_json = "1.0.82"
