[package]
name = "reproto-parser"
version = "0.4.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-parser"
description = """
reproto parser
"""

[features]
# Enable to emit very detailed tracing, potentially performance sensitive.
tracing = []

[dependencies]

[build-dependencies]
lalrpop = "0.19.8"
