[package]
name = "it"
version = "0.1.0"
edition = "2021"
authors = ["John-John Tedro <udoprog@tedro.se>"]

[features]
default = ["migrate-structures"]
migrate-structures = ["fs_extra"]

[dependencies]

[target.'cfg(windows)'.dependencies]
dunce = "1.0.2"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
